[project]
name = "octopus-linkedin"
version = "0.1.0"
description = "Governed LinkedIn marketing over MCP — draft, review, publish, comment, and analytics via the official LinkedIn API"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "Octoryn" }]
keywords = ["linkedin", "mcp", "marketing", "automation", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/octoryn/octopus-linkedin#readme"
Repository = "https://github.com/octoryn/octopus-linkedin"
Issues = "https://github.com/octoryn/octopus-linkedin/issues"
Changelog = "https://github.com/octoryn/octopus-linkedin/blob/main/CHANGELOG.md"

[project.scripts]
octopus-linkedin = "cli:main"
octopus-linkedin-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linkedin"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"
"cli.py" = "cli.py"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
